--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-matplotlib
-numpy
-pandas
-scikit-learn
-seaborn
-voila
+matplotlib==3.3.4
+numpy==1.19.2
+pandas===1.2.3
+scikit-learn==0.24.1
+seaborn==0.11.1
+voila==0.2.7
